add options to add/edit/delete a product, set order item's product to null if a product is deleted

--- a/src/main/resources/templates/components/layout.html
+++ b/src/main/resources/templates/components/layout.html
@@ -55,6 +55,17 @@
                             Dashboard
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/orders}">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                 fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                 stroke-linejoin="round" class="feather feather-file" aria-hidden="true">
+                                <path d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path>
+                                <polyline points="13 2 13 9 20 9"></polyline>
+                            </svg>
+                            Orders
+                        </a>
+                    </li>
                     <li class="nav-item d-flex justify-content-between align-items-center pe-2">
                         <a class="nav-link" th:href="@{/customers}">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -78,18 +89,7 @@
                             </svg>
                         </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/orders}">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                                 fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                 stroke-linejoin="round" class="feather feather-file" aria-hidden="true">
-                                <path d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path>
-                                <polyline points="13 2 13 9 20 9"></polyline>
-                            </svg>
-                            Orders
-                        </a>
-                    </li>
-                    <li class="nav-item">
+                    <li class="nav-item d-flex justify-content-between align-items-center pe-2">
                         <a class="nav-link" th:href="@{/products}">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                  fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
@@ -100,6 +100,16 @@
                             </svg>
                             Products
                         </a>
+                        <a class="link-secondary" th:href="@{/addProduct}">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                 fill="none"
+                                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                 class="feather feather-plus-circle" aria-hidden="true">
+                                <circle cx="12" cy="12" r="10"></circle>
+                                <line x1="12" y1="8" x2="12" y2="16"></line>
+                                <line x1="8" y1="12" x2="16" y2="12"></line>
+                            </svg>
+                        </a>
                     </li>
                 </ul>
                 <div id="currentOrder" class="invisible">
@@ -107,7 +117,7 @@
                         <span>Temporary Storage</span>
                     </h6>
                     <ul class="nav flex-column mb-2">
-                        <li class="nav-item">
+                        <li class="nav-item d-flex justify-content-between align-items-center pe-2">
                             <a class="nav-link" href="#">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                      fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
@@ -119,6 +129,14 @@
                                     <polyline points="10 9 9 9 8 9"></polyline>
                                 </svg>
                                 Current order
+                            </a>
+                            <a class="link-secondary" onclick="cancelOrder()" href="#">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                     stroke-linejoin="round" class="feather feather-activity">
+                                    <circle cx="12" cy="12" r="10"></circle>
+                                    <line x1="4.93" y1="4.93" x2="19.07" y2="19.07"></line>
+                                </svg>
                             </a>
                         </li>
                     </ul>
