--- a/src/main/resources/templates/customers.html
+++ b/src/main/resources/templates/customers.html
@@ -9,10 +9,11 @@
     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
         <h2 class="h2">Customers</h2>
         <div class="btn-toolbar">
-            <a th:href="@{/addCustomer}" class="btn btn-sm btn-outline-secondary">
-                <i class="bi bi-plus-circle"></i>&nbsp;Add Customer</a>
             <div id="sort-menu"
                  th:replace="~{components/sort-menu :: sort-menu('firstName-First Name, lastName-Last Name, email-Email, phoneNumber-Phone')}"></div>
+            <a th:href="@{/addCustomer}" class="btn btn-sm btn-outline-secondary ms-1">
+                <i class="bi bi-plus-circle"></i>&nbsp;Add Customer</a>
+            <div th:replace="~{components/export-btn-group :: export-btn-group(@{/api/customers/json}, @{/api/customers/xml})}"></div>
         </div>
     </div>
     <div class="row">
