--- a/src/main/resources/templates/components/layout.html
+++ b/src/main/resources/templates/components/layout.html
@@ -16,7 +16,7 @@
             crossorigin="anonymous"></script>
 
     <!-- Favicon -->
-    <!-- <link rel="icon" href="favicon.ico"> -->
+     <link rel="icon" th:href="@{/favicon.ico}">
 
     <!-- Custom styles for this template -->
     <link th:href="@{/css/styles.css}" rel="stylesheet">
