--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -6,18 +6,18 @@
 </head>
 <body>
 <div id="contents">
-    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+    <div class="d-flex justify-content-between flex-wrap align-items-center pt-3 pb-2 mb-3 border-bottom">
         <h2 class="h2">Products</h2>
-        <div class="btn-toolbar">
+        <div class="btn-toolbar gap-1">
             <div id="sort-menu" th:replace="~{components/sort-menu :: sort-menu('name-Name, price-Price')}"></div>
-            <a th:href="@{/addProduct}" class="btn btn-sm btn-outline-secondary ms-1">
+            <a th:href="@{/addProduct}" class="btn btn-sm btn-outline-secondary mx-1">
                 <i class="bi bi-plus-circle"></i>&nbsp;Add Product
             </a>
             <div th:replace="~{components/export-btn-group :: export-btn-group(@{/api/products/json}, @{/api/products/xml})}"></div>
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-4">
+        <div class="col-md-4">
             <form th:action="@{/products}" method="get">
                 <div class="input-group mb-3">
                     <input type="text" name="search" class="form-control" placeholder="Search"
