--- a/src/main/resources/templates/components/export-btn-group.html
+++ b/src/main/resources/templates/components/export-btn-group.html
@@ -3,7 +3,7 @@
       th:replace="~{components/layout :: layout(_, ~{::#contents}, _)}">
 <body>
 <div id="contents">
-    <div th:fragment="export-btn-group(json, xml)" class="btn-group mx-2">
+    <div th:fragment="export-btn-group(json, xml)" class="btn-group">
         <a th:if="${json}" th:href="${json}" download="oms_export.json" type="application/json"
            class="btn btn-sm btn-outline-secondary">Export to JSON</a>
         <a th:if="${xml}" th:href="${xml}" download="oms_export.xml" type="application/xml"
