--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -13,7 +13,7 @@
             <a th:href="@{/addProduct}" class="btn btn-sm btn-outline-secondary mx-1">
                 <i class="bi bi-plus-circle"></i>&nbsp;Add Product
             </a>
-            <div th:replace="~{components/export-btn-group :: export-btn-group(@{/api/products/json}, @{/api/products/xml})}"></div>
+            <div th:replace="~{components/export-btn-group :: export-btn-group(@{/api/products?format=json}, @{/api/products?format=xml})}"></div>
         </div>
     </div>
     <div class="row">
@@ -45,7 +45,7 @@
                 </td>
             </tr>
             <tr th:each="product, status : ${products}">
-                <td th:text="${status.count}">1</td>
+                <td th:text="${status.count + ((currentPage - 1) * pageSize)}">1</td>
                 <td th:text="${product.name}">Some product</td>
                 <td th:text="${#numbers.formatDecimal(product.price, 1, 'DEFAULT', 2, 'DEFAULT')}">399.99</td>
                 <td>
